force-app/main/default/objects/PricingCheck__c/PricingCheck__c.object-meta.xml
<CustomObject>
    <label>Consulta de Preço</label>
    <nameField>
        <displayFormat>PRICING-{0000}</displayFormat>
        <label>Numeração</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consulta de Preço</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>