force-app/main/default/objects/PricingCheck__c/fields/Categoria_do_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Categoria_do_Cliente__c</fullName>
    <label>Categoria do Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomerGroup</valueSetName>
    </valueSet>
</CustomField>