force-app/main/default/objects/PricingCheck__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Consulta de Preço</relationshipLabel>
    <relationshipName>Consulta_de_Pre_o</relationshipName>
    <type>Lookup</type>
</CustomField>