force-app/main/default/objects/PricingCheck__c/fields/DistributionCenter__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro de Distribuição</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Consulta de Preço</relationshipLabel>
    <relationshipName>Consulta_de_Pre_o</relationshipName>
    <type>Lookup</type>
</CustomField>