force-app/main/default/objects/PricingCheck__c/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de pagamento</label>
    <referenceTo>PaymentCondition__c</referenceTo>
    <relationshipLabel>Consulta de Preço</relationshipLabel>
    <relationshipName>Consulta_de_Pre_o</relationshipName>
    <type>Lookup</type>
</CustomField>