force-app/main/default/objects/PricingCheck__c/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalogo de Preço</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Consulta de Preço</relationshipLabel>
    <relationshipName>Consulta_de_Pre_o</relationshipName>
    <type>Lookup</type>
</CustomField>