force-app/main/default/objects/PricingCheck__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Consulta de Preço</relationshipLabel>
    <relationshipName>Consulta_de_Pre_o</relationshipName>
    <type>Lookup</type>
</CustomField>