force-app/main/default/objects/PricingCheck__c/fields/Tipo_de_Carga__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Carga__c</fullName>
    <label>Tipo de Carga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fracionada</fullName>
            </value>
            <value>
                <fullName>Fechada</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>