force-app/main/default/objects/PricingCheck__c/fields/Volumn__c.field-meta.xml
<CustomField>
    <fullName>Volumn__c</fullName>
    <label>Volume de Entrega</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>